# Bhumel-app

./: .env.example  .gitignore  .prettierignore  AI.md  Cargo.toml  commitlint.config.cjs  eslint.config.js  initialize.js  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yaml
.husky/: pre-commit
contracts/track/: Cargo.toml
contracts/track/src/: lib.rs
src/: App.svelte  app.d.ts  app.html  auth.ts  hooks.server.ts
src/lib/: passkeyClient.ts
src/lib/components/: ConnectButtons.svelte  GitHubAppInstall.svelte
src/lib/contracts/: track.ts
src/lib/server/: passkeyServer.ts
src/lib/services/: certify.ts  deepseek-analysis.ts  github-app.ts  github.test.ts  github.ts  mcp.test.ts  mcp.ts  rust-wasm-summary.ts  simple-analysis.ts
src/lib/stores/: contractId.ts  githubStore.ts  shareStore.ts  trackStore.ts
src/routes/: +layout.server.ts  +layout.svelte  +page.svelte
src/routes/api/analyze-first/: +server.ts
src/routes/api/analyze-gemini/: +server.ts
src/routes/api/github-app-events/: +server.ts
src/routes/api/rust-wasm-summary/: +server.ts
src/routes/api/send/: +server.ts
src/routes/api/test-commits/: +server.ts
src/routes/dashboard/: +layout.svelte
src/routes/dashboard/skill-progression/: +page.server.ts  +page.svelte
src/routes/dashboard/track/: +page.svelte
src/routes/discover/: +page.svelte
src/routes/share/: +page.svelte
src/routes/signout/: +page.server.ts
src/routes/signup/: +page.svelte
src/routes/verify/: +page.svelte
(+9 files in other folders)
