[package]
name = "track"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]
doctest = false

[dependencies]
soroban-sdk = "22.0.8"

[dev-dependencies]
soroban-sdk = { version = "22.0.8", features = ["testutils"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1